package com.coderpwh.design.factory;

/**
 * @author coderpwh
 * @date 2023/9/15 16:20
 */
public interface Coin {

    /***
     * 获取描述
     */
    void getDescription();
}
