@startuml
package com.coderpwh.factory{
  class App{
   ~ LOGGER: Logger
   + App()
   + main(args:String[])
  }

  class  CoinFactory{
   + CoinFactory()
   + getCoin(type:CoinType):Coin
  }


 enum CoinType{
  + GOPPER {static}
  + GOLD {static}
  - constructor: Supplier<Coin>
  + getConstructor(): Supplier<Coin>
  + valueOf(name:String):CoinType
  + values(): CoinType[]
 }



 interface Coin{
  + getDescription():String
 }

 class CopperCoin{
     ~ DESCRIPTION: String {static}
     + CopperCoin()
     + getDescription():String
 }

 class  GoldCoin{
   ~ DESCRIPTION: String {static}
   + GoldCoin()
   + getDescription():String
 }


 GoldCoin ..|> Coin
 CopperCoin ..|> Coin

}
@enduml